--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "adm-zip": "^0.4.16",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "compression": "^1.7.4",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "feedparser-promised": "^2.0.1",
     "http": "^0.0.1-security",
     "ip": "^1.1.5",
+    "lodash": "^4.17.19",
     "multer": "^1.4.1",
     "natural": "^0.6.3",
     "opusscript": "^0.0.7",
